<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:gravity="center"
android:orientation="vertical">


    <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/label_sign_in"
    android:textStyle="bold"
    android:layout_marginStart="15dp"
    android:layout_marginBottom="10dp"
    android:fontFamily="@font/gilroy_bold"
    android:textSize="20sp"/>



    <EditText
        android:id="@+id/edt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:fontFamily="@font/gilroy_light"
        android:layout_marginTop="5dp"
        android:inputType="textEmailAddress"
        android:layout_marginEnd="15dp"
        android:background="@color/colorTextBackground"
        android:hint="@string/enter_email"
        android:padding="12dp"
        android:textColor="@color/colorText" />

    <EditText
        android:id="@+id/edt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/gilroy_light"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:inputType="textPassword"
        android:layout_marginEnd="15dp"
        android:background="@color/colorTextBackground"
        android:hint="@string/enter_password"
        android:padding="12dp"
        android:textColor="@color/colorText" />

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/gilroy_light"
        android:text="Show Password"
        android:textColor="@color/colorText"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:id="@+id/showpwd"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@color/colorPrimary"
        android:layout_marginEnd="2dp"
        android:textColor="@color/colorAccent"
        android:text="@string/btn_login"/>

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:background="@color/colorDarkGray"
        android:textColor="@color/colorAccent"
        android:text="@string/btn_sign_up"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Forgot Password?"
        android:id="@+id/txtForgot"
        android:layout_marginTop="40dp"
        android:textSize="17sp"
        android:fontFamily="@font/gilroy_bold"/>


</LinearLayout>